--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,6 +26,10 @@ img.portrait {
   max-width: 70vw;
 }
 
+img.s {
+  max-width: 75%;
+}
+
 @media (min-width: 768px) {
   img.xl {
     max-width: 140%;
